# MPI_projects

./: .gitignore  README.md
audio_processing/: Makefile  README.md  client.cpp  client.h  client_server.cpp  client_server.h  low_pass_server.cpp  low_pass_server.h  main.cpp  mian.h  run_simulations.sh  server.cpp  server.h
audio_processing/mpi_echo/: Makefile  mpi_echo.cpp
audio_processing/processed_files/: README.md
audio_processing/recorder/: Makefile  recorder.cpp
audio_processing/simple_echo/: simple_echo.cpp
audio_processing/src/: client.cpp  client_server.cpp  client_server.h  low_pass_server.cpp  main.cpp  server.cpp  server.h
examples/: .gitignore  Makefile  README.md  col_comm_split.cpp  col_datatype.cpp  col_scatter.cpp  group_comm_split.cpp  row_comm_split.cpp  row_datatype.cpp  scan_reduce_pack.cpp  struct_scatter.cpp  tile_comm_split.cpp  tile_datatype  tile_datatype.cpp  tile_scatter.cpp
heat_propagation/: CMakeLists.txt  README.md
heat_propagation/results_no_fs_data_type/: display_plots.html  generate_plots.py  run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
heat_propagation/results_no_fs_raw/: run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
heat_propagation/results_no_fs_settings/: display_plots.html  generate_plots.py  run_full_hybrid_1d_out.csv  run_full_mpi_2d_out.csv
heat_propagation/results_with_fs_data_type/: generate_plots.py  run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
heat_propagation/results_with_fs_raw/: run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
heat_propagation/results_with_fs_settings/: run_full_hybrid_1d_err.txt  run_full_hybrid_2d_err.txt
heat_propagation/scripts/: fs_comparrison.sh  generate_data.sh  generate_plots.py  h5_comparrison.sh  hybrid_1d_comm_delay.sh  hybrid_1d_halo_delay.sh  load_apps.sh  load_modules.sh  mpi_2d_comm_delay.sh  mpi_2d_halo_delay.sh  ppp_scorep_filter.flt  run_full_hybrid_1d.sh  run_full_hybrid_2d.sh  run_full_mpi_2d.sh  run_scorep_profile.sh  scorep_make.sh  test.sh  test_bara.sh  test_omp.sh  test_omp_bara.sh
heat_propagation/selected_results/: extract_rows.py  fs_comparison.csv  fs_comparison_aligned.csv  fs_settings.csv  hybrid_1d_comm_delay_out.csv  hybrid_1d_comm_delay_root.csv  hybrid_1d_halo_delay_out.csv  mpi_2d_comm_delay_out.csv  mpi_2d_comm_delay_root.csv  mpi_2d_halo_delay_out.csv  plot_P2P_RMA_comparison.py  plot_all.sh  plot_communication_delay.py  plot_fs_settings.py  plot_halo_computation_delay.py  plot_strong_scaling.py  plot_weak_scaling.py  result_origins.md  strong_scaling.csv  weak_scaling.csv
heat_propagation/sources/: Hdf5Handle.hpp  HeatSolverBase.cpp  HeatSolverBase.hpp  MaterialProperties.cpp  MaterialProperties.hpp  ParallelHeatSolver.cpp  ParallelHeatSolver.hpp  SequentialHeatSolver.cpp  SequentialHeatSolver.hpp  SimulationProperties.cpp  SimulationProperties.hpp  data_generator.cpp  main.cpp  utils.cpp  utils.hpp
life/: Makefile  README.md  life  life.cpp  life_test  test.bpm  test.sh  test_against_solved.sh  transpose_grid.py  wraparound_test_against_solved.sh
life/grids/: 10x10.txt  4x16.txt  8x8.txt  line_16x16.txt
life/other_grids/: glider_create_gun.txt
life/solved_grids/glider_28x8/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt
life/solved_grids/glider_8x28/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  25.txt
life/solved_grids/square_arrow_10x20/: 00.txt  01.txt
life/solved_grids/square_arrow_10x24/: 02.txt  04.txt
life/solved_grids/square_arrow_24x10/: 00.txt  01.txt  02.txt  03.txt
life/solved_grids/square_arrow_24x12/: 00.txt  01.txt  02.txt  04.txt
life/solved_grids/vertical_line1_16x16/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt
life/solved_grids/vertical_line2_16x16/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt
life/wraparound_solved_grids/glider_8x8/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt
life/wraparound_solved_grids/glider_T_8x8/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt
pipeline_merge_sort/: Makefile  README.md  compare_inputs.py  merlin_test.sh  performance.py  performance.sh  pms.cpp  single_core_example.ipynb  sorted.py  test.sh  test.sl
pipeline_merge_sort/pdir/: performance.sh  performance.sl
pipeline_merge_sort/performance_NTB/: ascending_batch.csv  ascending_single.csv  descending_batch.csv
pipeline_merge_sort/performance_bara/: ascending_batch.csv  ascending_single.csv  descending_batch.csv  descending_single.csv
pipeline_merge_sort/performance_ntb/: ascending_single.csv  descending_single.csv
pipeline_merge_sort/performance_pc/: ascending_batch.csv  ascending_single.csv  descending_batch.csv  descending_single.csv
pipeline_merge_sort/tdir/: test.sh
